add counter in toolbar

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,34 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 <head>
-    <title>Webpack setting</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>:SQUASHFORFRIENDS</title>
+    <link rel="icon" href="./favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>This is Webpack setting</h1>
-    <img src="./img/adorable-animal-blur-406014.jpg">
+<header class="header">
+    <div class="header__toolbar toolbar">
+        <div class="toolbar__counter counter">
+            <div class="counter__item">
+                <span class="counter__itemDigit">8</span>&nbsp;стран
+            </div>
+            <div class="counter__item">
+                <span class="counter__itemDigit">12</span>&nbsp;клубов
+            </div>
+            <div class="counter__item">
+                    <span class="counter__itemDigit">12&nbsp;230</span>&nbsp;игроков
+            </div>
+            <div class="counter__item">
+                <span class="counter__itemDigit">123</span>&nbsp;амбассадора
+            </div>
+        </div>
+        <div class="toolbar__helpers"></div>
+    </div>
+    <nav class="navigation"></nav>
+</header>
 </body>
-</html>  
+</html>
