--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,43 @@
                 <span class="counter__itemDigit">12</span>&nbsp;клубов
             </div>
             <div class="counter__item">
-                    <span class="counter__itemDigit">12&nbsp;230</span>&nbsp;игроков
+                <span class="counter__itemDigit">12&nbsp;230</span>&nbsp;игроков
             </div>
             <div class="counter__item">
                 <span class="counter__itemDigit">123</span>&nbsp;амбассадора
             </div>
         </div>
-        <div class="toolbar__helpers"></div>
+        <div class="toolbar__helpers">
+            <div class="search toolbar__helper">
+                <img class="search__icon" src="./img/search.png" alt="Поиск" />
+            </div>
+            <div class="language toolbar__helper">
+                <span class="language__item  language__item--active">Ru</span>
+                <span class="language__item language__item--last">En</span>
+            </div>
+            <div class="social toolbar__helper">
+                <div class="social__item">
+                    <a href="vk.com" target="_blank" class="social__link">
+                        <img class="social__image" src="./img/socials/vk.png" alt="VK" />
+                    </a>
+                </div>
+                <div class="social__item">
+                    <a href="facebook.com" target="_blank" class="social__link">
+                        <img class="social__image" src="./img/socials/fb.png" alt="FB" />
+                    </a>
+                </div>
+                <div class="social__item">
+                    <a href="instagram.com" target="_blank" class="social__link">
+                        <img class="social__image" src="./img/socials/ig.png" alt="Instagram" />
+                    </a>
+                </div>
+                <div class="social__item">
+                    <a href="youtube.com" target="_blank" class="social__link">
+                        <img class="social__image" src="./img/socials/yt.png" alt="youtube" />
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
     <nav class="navigation"></nav>
 </header>
