add menu and fonts

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>:SQUASHFORFRIENDS</title>
     <link rel="icon" href="./favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Lato&display=swap" rel="stylesheet">
+    <link href="http://allfont.ru/allfont.css?fonts=bebas-neue" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -28,7 +29,7 @@
         </div>
         <div class="toolbar__helpers">
             <div class="search toolbar__helper">
-                <img class="search__icon" src="./img/search.png" alt="Поиск" />
+                <img class="search__icon" src="./img/search.png" alt="Поиск"/>
             </div>
             <div class="language toolbar__helper">
                 <span class="language__item  language__item--active">Ru</span>
@@ -37,28 +38,41 @@
             <div class="social toolbar__helper">
                 <div class="social__item">
                     <a href="vk.com" target="_blank" class="social__link">
-                        <img class="social__image" src="./img/socials/vk.png" alt="VK" />
+                        <img class="social__image" src="./img/socials/vk.png" alt="VK"/>
                     </a>
                 </div>
                 <div class="social__item">
                     <a href="facebook.com" target="_blank" class="social__link">
-                        <img class="social__image" src="./img/socials/fb.png" alt="FB" />
+                        <img class="social__image" src="./img/socials/fb.png" alt="FB"/>
                     </a>
                 </div>
                 <div class="social__item">
                     <a href="instagram.com" target="_blank" class="social__link">
-                        <img class="social__image" src="./img/socials/ig.png" alt="Instagram" />
+                        <img class="social__image" src="./img/socials/ig.png" alt="Instagram"/>
                     </a>
                 </div>
                 <div class="social__item">
                     <a href="youtube.com" target="_blank" class="social__link">
-                        <img class="social__image" src="./img/socials/yt.png" alt="youtube" />
+                        <img class="social__image" src="./img/socials/yt.png" alt="youtube"/>
                     </a>
                 </div>
             </div>
         </div>
     </div>
-    <nav class="navigation"></nav>
+    <div class="menu">
+        <nav class="menu__block navigation">
+            <a class="navigation__item navigation__item--red" href="/">squash4friends</a>
+            <a class="navigation__item" href="#">Клубы</a>
+            <a class="navigation__item" href="#">Амбассадоры</a>
+            <a class="navigation__item" href="#">О нас</a>
+            <a class="navigation__item" href="#">Сквош-вики</a>
+            <a class="navigation__item" href="#">Статьи</a>
+        </nav>
+        <div class="feedback menu__block">
+            <div class="feedback__item feedback__item--white">Стать амбассадором</div>
+            <div class="feedback__item feedback__item--red">Попробовать сквош</div>
+        </div>
+    </div>
 </header>
 </body>
 </html>
