--- a/src/index.html
+++ b/src/index.html
@@ -37,22 +37,22 @@
             </div>
             <div class="social toolbar__helper">
                 <div class="social__item">
-                    <a href="vk.com" target="_blank" class="social__link">
+                    <a href="https://vk.com" target="_blank" class="social__link">
                         <img class="social__image" src="./img/socials/vk.png" alt="VK"/>
                     </a>
                 </div>
                 <div class="social__item">
-                    <a href="facebook.com" target="_blank" class="social__link">
+                    <a href="https://facebook.com" target="_blank" class="social__link">
                         <img class="social__image" src="./img/socials/fb.png" alt="FB"/>
                     </a>
                 </div>
                 <div class="social__item">
-                    <a href="instagram.com" target="_blank" class="social__link">
+                    <a href="https://instagram.com" target="_blank" class="social__link">
                         <img class="social__image" src="./img/socials/ig.png" alt="Instagram"/>
                     </a>
                 </div>
                 <div class="social__item">
-                    <a href="youtube.com" target="_blank" class="social__link">
+                    <a href="https://youtube.com" target="_blank" class="social__link">
                         <img class="social__image" src="./img/socials/yt.png" alt="youtube"/>
                     </a>
                 </div>
@@ -61,7 +61,7 @@
     </div>
     <div class="menu">
         <nav class="menu__block navigation">
-            <a class="navigation__item navigation__item--red" href="/">squash4friends</a>
+            <a class="navigation__item navigation__item--red logoSymbol logoSymbol--white" href="/">squash4friends</a>
             <a class="navigation__item" href="#">Клубы</a>
             <a class="navigation__item" href="#">Амбассадоры</a>
             <a class="navigation__item" href="#">О нас</a>
@@ -69,8 +69,8 @@
             <a class="navigation__item" href="#">Статьи</a>
         </nav>
         <div class="feedback menu__block">
-            <div class="feedback__item feedback__item--white">Стать амбассадором</div>
-            <div class="feedback__item feedback__item--red">Попробовать сквош</div>
+            <button class="feedback__item feedback__item--white">Стать амбассадором</button>
+            <button class="feedback__item feedback__item--red">Попробовать сквош</button>
         </div>
     </div>
 </header>
