--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>:SQUASHFORFRIENDS</title>
     <link rel="icon" href="./favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Lato&display=swap" rel="stylesheet">
-    <link href="http://allfont.ru/allfont.css?fonts=bebas-neue" rel="stylesheet" type="text/css" />
+    <link href="http://allfont.ru/allfont.css?fonts=bebas-neue" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -68,11 +68,63 @@
             <a class="navigation__item" href="#">Сквош-вики</a>
             <a class="navigation__item" href="#">Статьи</a>
         </nav>
-        <div class="feedback menu__block">
-            <button class="feedback__item feedback__item--white">Стать амбассадором</button>
-            <button class="feedback__item feedback__item--red">Попробовать сквош</button>
+        <div class="feedback menu__block linkBlock">
+            <button class="feedback__item linkBlock__item linkBlock__item--white">Стать амбассадором</button>
+            <button class="feedback__item linkBlock__item linkBlock__item--red">Попробовать сквош</button>
         </div>
     </div>
 </header>
+<main>
+    <section class="slider">
+        <div class="slider__item slide">
+            <div class="slide__description slideDescription slide__block">
+                <div class="slide__title slideTitle">
+                    <span class="slideTitle__text slideTitle__text--red-white">
+                        Влюбляем
+                    </span>
+                    <br>
+                    <span class="slideTitle__text">в сквош</span>
+                </div>
+                <div class="slideDescription__content  logoSymbol logoSymbol--red">
+                    <span class="slideDescription__text slideDescription__text--bold">Пожалуй, это лучшая спортивная
+                        игра, которую создал
+                        человек. Сегодня мы — амбассадоры сквоша в нашей стране.</span>
+                    <span class="slideDescription__text">Знаете ли вы, что в сквош в мире играет каждый 300-й человек? Для сравнения в хоккей на льду играет один человек из 4100! В России сквош только набирает популярность, и играет в него лишь один человек из 70 000.</span>
+                </div>
+                <!--                <img class="slideDescription__verticalImage" src="img/slider/squash4friends.png">-->
+            </div>
+            <div class="slide__photo slidePromo slide__block" style="background-image: url('img/slider/moskva.png')">
+                <div class="slidePromo__container">
+                    <div class="slidePromo__descriptionWrapper">
+                        <div class="sliderPromo__triangle"></div>
+                        <div class="slidePromo__description slidePromoDescription logoSymbol logoSymbol--red">
+                            <span class="slidePromoDescription__text slidePromoDescription__text--bold">Иван Бородин</span>
+                            <span class="slidePromoDescription__text">Мы хотим, чтобы в том числе с моей помощью об этой игре узнал миллион человек.</span>
+                        </div>
+                    </div>
+                    <div class="slidePromo__linkBlock linkBlock">
+                        <a href="#" class="linkBlock__item linkBlock__item--red">Все амбассадоры &rarr;</a>
+                    </div>
+
+                </div>
+
+                <div class="slidePromo__overlay"></div>
+            </div>
+            <div class="slide__footer slideFooter">
+                <div class="slideFooter__more">Подробнее</div>
+                <div class="slideFooter__pagination slidePagination">
+                    <ul class="slidePagination__container">
+                        <li class="slidePagination__item slidePagination__item--active">1</li>
+                        <li class="slidePagination__item">2</li>
+                        <li class="slidePagination__item">3</li>
+                        <li class="slidePagination__item">4</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="slide__person">
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
