start about block

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
                         человек. Сегодня мы — амбассадоры сквоша в нашей стране.</span>
                     <span class="slideDescription__text">Знаете ли вы, что в сквош в мире играет каждый 300-й человек? Для сравнения в хоккей на льду играет один человек из 4100! В России сквош только набирает популярность, и играет в него лишь один человек из 70 000.</span>
                 </div>
-                <!--                <img class="slideDescription__verticalImage" src="img/slider/squash4friends.png">-->
+                <img class="slideDescription__verticalImage" src="./img/slider/squash4friends.png">
             </div>
             <div class="slide__photo slidePromo slide__block" style="background-image: url('img/slider/moskva.png')">
                 <div class="slidePromo__container">
@@ -111,17 +111,48 @@
                 <div class="slidePromo__overlay"></div>
             </div>
             <div class="slide__footer slideFooter">
-                <div class="slideFooter__more">Подробнее</div>
+                <button class="slideFooter__more">Подробнее</button>
                 <div class="slideFooter__pagination slidePagination">
                     <ul class="slidePagination__container">
+                        <li
+                                class="slidePagination__item slidePagination__item--arrow slidePagination__itemArrow--left">&#11104;</li>
                         <li class="slidePagination__item slidePagination__item--active">1</li>
                         <li class="slidePagination__item">2</li>
                         <li class="slidePagination__item">3</li>
                         <li class="slidePagination__item">4</li>
+                        <li
+                                class="slidePagination__item slidePagination__itemArrow slidePagination__itemArrow--right">&#10141;</li>
                     </ul>
                 </div>
             </div>
             <div class="slide__person">
+                <img class="slide__personImage" src="./img/slider/person.png" alt="">
+            </div>
+        </div>
+    </section>
+
+
+    <section class="about">
+        <div class="about__block about__block--descr">
+            <div class="about__title aboutTitle">
+                    <span class="aboutTitle__text">
+                        Кто мы и почему
+                    </span>
+                <br>
+                <span class="aboutTitle__text aboutTitle__text--red">любим сквош</span>
+            </div>
+            <div class="aboutDescription__content  logoSymbol logoSymbol--red">
+                    <span class="aboutDescription__text aboutDescription__text--bold">
+                        Студенты и предприниматели, профессоры и спортсмены, топ-менеджеры и журналисты
+                    </span>
+                <span class="aboutDescription__text">
+                    Мы очень разные, но всех их объединяет игра, эмоции, азарт, общение, мозги, хорошая форма и все вот это. Четыре года назад нас было 300-400 человек. Мы хотим больше, больше друзей в нашей любимой игре, и мы зовём вас поиграть с нами. Если не пробовали, любой амбассадор абсолютно бесплатно с удовольствием проведёт вам сквош-ликбез в одном из крупнейших клубов страны.
+                </span>
+            </div>
+        </div>
+        <div class="about__block about__block--photo" style="background-image: url(./img/about/about.png)">
+            <div class="about__linkBlock linkBlock"> <a href="#" class="linkBlock__item linkBlock__item--red">Читать
+                подробнее →</a>
             </div>
         </div>
     </section>
