--- a/src/index.html
+++ b/src/index.html
@@ -60,13 +60,27 @@
         </div>
     </div>
     <div class="menu">
-        <nav class="menu__block navigation">
-            <a class="navigation__item navigation__item--red logoSymbol logoSymbol--white" href="/">squash4friends</a>
-            <a class="navigation__item" href="#">Клубы</a>
-            <a class="navigation__item" href="#">Амбассадоры</a>
-            <a class="navigation__item" href="#">О нас</a>
-            <a class="navigation__item" href="#">Сквош-вики</a>
-            <a class="navigation__item" href="#">Статьи</a>
+        <nav class="menu__block navigation nav">
+            <div class="navigation__item navigation__item--red ">
+                <div class="logoSymbol logoSymbol--link logoSymbol--white">
+                    <a class="navigation__link " href="/">squash4friends</a>
+                </div>
+            </div>
+            <div class="navigation__item ">
+                <a class="navigation__link" href="#">Клубы</a>
+            </div>
+            <div class="navigation__item ">
+                <a class="navigation__link" href="#">Амбассадоры</a>
+            </div>
+            <div class="navigation__item ">
+                <a class="navigation__link" href="#">О нас</a>
+            </div>
+            <div class="navigation__item ">
+                <a class="navigation__link" href="#">Сквош-вики</a>
+            </div>
+            <div class="navigation__item ">
+                <a class="navigation__link" href="#">Статьи</a>
+            </div>
         </nav>
         <div class="feedback menu__block linkBlock">
             <button class="feedback__item linkBlock__item linkBlock__item--white">Стать амбассадором</button>
@@ -85,10 +99,11 @@
                     <br>
                     <span class="slideTitle__text">в сквош</span>
                 </div>
-                <div class="slideDescription__content  logoSymbol logoSymbol--red">
-                    <span class="slideDescription__text slideDescription__text--bold">Пожалуй, это лучшая спортивная
+                <div class="slideDescription__content ">
+                    <div class="logoSymbol"> <span
+                            class="slideDescription__text slideDescription__text--bold">Пожалуй, это лучшая спортивная
                         игра, которую создал
-                        человек. Сегодня мы — амбассадоры сквоша в нашей стране.</span>
+                        человек. Сегодня мы — амбассадоры сквоша в нашей стране.</span></div>
                     <span class="slideDescription__text">Знаете ли вы, что в сквош в мире играет каждый 300-й человек? Для сравнения в хоккей на льду играет один человек из 4100! В России сквош только набирает популярность, и играет в него лишь один человек из 70 000.</span>
                 </div>
                 <img class="slideDescription__verticalImage" src="./img/slider/squash4friends.png">
@@ -97,8 +112,10 @@
                 <div class="slidePromo__container">
                     <div class="slidePromo__descriptionWrapper">
                         <div class="sliderPromo__triangle"></div>
-                        <div class="slidePromo__description slidePromoDescription logoSymbol logoSymbol--red">
-                            <span class="slidePromoDescription__text slidePromoDescription__text--bold">Иван Бородин</span>
+                        <div class="slidePromo__description slidePromoDescription">
+                            <div class="logoSymbol">
+                                <span class="slidePromoDescription__text slidePromoDescription__text--bold">Иван Бородин</span>
+                            </div>
                             <span class="slidePromoDescription__text">Мы хотим, чтобы в том числе с моей помощью об этой игре узнал миллион человек.</span>
                         </div>
                     </div>
@@ -112,16 +129,20 @@
             </div>
             <div class="slide__footer slideFooter">
                 <button class="slideFooter__more">Подробнее</button>
-                <div class="slideFooter__pagination slidePagination">
-                    <ul class="slidePagination__container">
+                <div class="slideFooter__pagination slidePagination  paginationBlock">
+                    <ul class="paginationBlock__container">
                         <li
-                                class="slidePagination__item slidePagination__item--arrow slidePagination__itemArrow--left">&#11104;</li>
-                        <li class="slidePagination__item slidePagination__item--active">1</li>
-                        <li class="slidePagination__item">2</li>
-                        <li class="slidePagination__item">3</li>
-                        <li class="slidePagination__item">4</li>
+                                class="paginationBlock__item paginationBlock__item--arrow  paginationBlock__itemArrow--left">
+                            &#11104;
+                        </li>
+                        <li class="paginationBlock__item  paginationBlock__item--active">1</li>
+                        <li class="paginationBlock__item">2</li>
+                        <li class="paginationBlock__item">3</li>
+                        <li class="paginationBlock__item">4</li>
                         <li
-                                class="slidePagination__item slidePagination__itemArrow slidePagination__itemArrow--right">&#10141;</li>
+                                class=" paginationBlock__item  paginationBlock__itemArrow  paginationBlock__itemArrow--right">
+                            &#10141;
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -135,27 +156,93 @@
     <section class="about">
         <div class="about__block about__block--descr">
             <div class="about__title aboutTitle">
-                    <span class="aboutTitle__text">
+                    <span class="aboutTitle__text titleText">
                         Кто мы и почему
                     </span>
                 <br>
-                <span class="aboutTitle__text aboutTitle__text--red">любим сквош</span>
+                <span class="aboutTitle__text titleText titleText--red">любим сквош</span>
             </div>
-            <div class="aboutDescription__content  logoSymbol logoSymbol--red">
+            <div class="aboutDescription__content ">
+                <div class="logoSymbol">
                     <span class="aboutDescription__text aboutDescription__text--bold">
                         Студенты и предприниматели, профессоры и спортсмены, топ-менеджеры и журналисты
                     </span>
+                </div>
                 <span class="aboutDescription__text">
                     Мы очень разные, но всех их объединяет игра, эмоции, азарт, общение, мозги, хорошая форма и все вот это. Четыре года назад нас было 300-400 человек. Мы хотим больше, больше друзей в нашей любимой игре, и мы зовём вас поиграть с нами. Если не пробовали, любой амбассадор абсолютно бесплатно с удовольствием проведёт вам сквош-ликбез в одном из крупнейших клубов страны.
                 </span>
             </div>
+            <div class="aboutDescription__promo aboutDescriptionBlock">
+                <div class="aboutDescriptionBlock__item">
+                    <div class="aboutDescriptionBlock__main">4-5</div>
+                    <div class="aboutDescriptionBlock__text">тысяч человек</div>
+                </div>
+                <div class="aboutDescriptionBlock__item">
+                    <div class="aboutDescriptionBlock__main">100+</div>
+                    <div class="aboutDescriptionBlock__text">игровых кортов</div>
+                </div>
+            </div>
         </div>
         <div class="about__block about__block--photo" style="background-image: url(./img/about/about.png)">
-            <div class="about__linkBlock linkBlock"> <a href="#" class="linkBlock__item linkBlock__item--red">Читать
+            <div class="about__linkBlock linkBlock"><a href="#" class="linkBlock__item linkBlock__item--red">Читать
                 подробнее →</a>
             </div>
         </div>
     </section>
+
+    <section class="instagram innerWrapper">
+        <div class="wrapper">
+            <div class="instagram__container">
+                <div class="instagram__title titleText">наш инстаграм</div>
+                <div class="instagram__description logoSymbol">Подпишитесь на наш инстаграм, чтобы быть в курсе всех
+                    событий
+                    #squash4friends
+                </div>
+                <ul class="instagram__feed">
+                    <li class="instagram__item"><img src="./img/instagram/image_1.png" alt=""></li>
+                    <li class="instagram__item"><img src="./img/instagram/image_2.png" alt=""></li>
+                    <li class="instagram__item"><img src="./img/instagram/image_3.png" alt=""></li>
+                    <li class="instagram__item"><img src="./img/instagram/image_4.png" alt=""></li>
+                </ul>
+                <div class="instagram__footer">
+                    <div class="instagram__linkBlock linkBlock">
+                        <a href="#" class="linkBlock__item linkBlock__item--red">Следить за нами →</a>
+                    </div>
+                    <div class="instagram__pagination paginationBlock">
+                        <ul class="paginationBlock__container">
+                            <li
+                                    class=" paginationBlock__item  paginationBlock__item--arrow  paginationBlock__itemArrow--left">
+                                &#11104;
+                            </li>
+                            <li class="paginationBlock__item paginationBlock__item--active">1</li>
+                            <li class="paginationBlock__item">2</li>
+                            <li class="paginationBlock__item">3</li>
+                            <li class="paginationBlock__item">4</li>
+                            <li
+                                    class="paginationBlock_item  paginationBlock__itemArrow  paginationBlock__itemArrow--right">
+                                &#10141;
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="./img/instagram/insta_title.png" class="instagram__logo" alt="">
+    </section>
+    <footer class="footer">
+        <div class="bottomBar">
+            <div class="wrapper">
+                <div class="bottomBar__content">
+                    <div class="bottomBar__copyright">
+                        © squash4friends 2019
+                    </div>
+                    <a href="#" class="bottomBar__policy">
+                        Политика конфиденциальности
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </main>
 </body>
 </html>
