add footer counter

--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,16 @@
 <header class="header">
     <div class="header__toolbar toolbar">
         <div class="toolbar__counter counter">
-            <div class="counter__item">
+            <div class="counter__item toolbar__item">
                 <span class="counter__itemDigit">8</span>&nbsp;стран
             </div>
-            <div class="counter__item">
+            <div class="counter__item toolbar__item">
                 <span class="counter__itemDigit">12</span>&nbsp;клубов
             </div>
-            <div class="counter__item">
+            <div class="counter__item toolbar__item">
                 <span class="counter__itemDigit">12&nbsp;230</span>&nbsp;игроков
             </div>
-            <div class="counter__item">
+            <div class="counter__item toolbar__item">
                 <span class="counter__itemDigit">123</span>&nbsp;амбассадора
             </div>
         </div>
@@ -219,7 +219,7 @@
                             <li class="paginationBlock__item">3</li>
                             <li class="paginationBlock__item">4</li>
                             <li
-                                    class="paginationBlock_item  paginationBlock__itemArrow  paginationBlock__itemArrow--right">
+                                    class="paginationBlock__item  paginationBlock__itemArrow  paginationBlock__itemArrow--right">
                                 &#10141;
                             </li>
                         </ul>
@@ -230,7 +230,38 @@
         <img src="./img/instagram/insta_title.png" class="instagram__logo" alt="">
     </section>
     <footer class="footer">
-        <div class="bottomBar">
+        <div class="footer__block footerCounter">
+            <div class="wrapper">
+                <ul class="footerCounter__container counter">
+                    <li class="footerCounter__item">
+                        <img src="./img/footer/globe.png" alt="" class="footerCounter__image">
+                        <div class="footerCounter__textBlock counter__item">
+                            <span class="counter__itemDigit">8</span>&nbsp;стран
+                        </div>
+                    </li>
+                    <li class="footerCounter__item">
+                        <img src="./img/footer/ball.png" alt="" class="footerCounter__image">
+                        <div class="footerCounter__textBlock counter__item">
+                            <span class="counter__itemDigit">12</span>&nbsp;клубов
+                        </div>
+                    </li>
+                    <li class="footerCounter__item">
+                        <img src="./img/footer/person.png" alt="" class="footerCounter__image">
+                        <div class="footerCounter__textBlock counter__item">
+                            <span class="counter__itemDigit">12 230</span>&nbsp;игроков
+                        </div>
+                    </li>
+                    <li class="footerCounter__item">
+                        <img src="./img/footer/speaker.png" alt="" class="footerCounter__image">
+                        <div class="footerCounter__textBlock counter__item">
+                            <span class="counter__itemDigit">123</span>&nbsp;амбассадора
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer__block bottomBar">
             <div class="wrapper">
                 <div class="bottomBar__content">
                     <div class="bottomBar__copyright">
