--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
         <nav class="menu__block navigation nav">
             <div class="navigation__item navigation__item--red ">
                 <div class="logoSymbol logoSymbol--link logoSymbol--white">
-                    <a class="navigation__link " href="/">squash4friends</a>
+                    <a class="navigation__link navigation__link--white" href="/">squash4friends</a>
                 </div>
             </div>
             <div class="navigation__item ">
@@ -230,6 +230,56 @@
         <img src="./img/instagram/insta_title.png" class="instagram__logo" alt="">
     </section>
     <footer class="footer">
+        <div class="footer__nav">
+        <div class="wrapper">
+            <div class="footer__navContainer">
+                <nav class="menu__block navigation nav">
+                    <div class="navigation__item navigation__item--red ">
+                        <div class="logoSymbol logoSymbol--link logoSymbol--white">
+                            <a class="navigation__link navigation__link--white" href="/">squash4friends</a>
+                        </div>
+                    </div>
+                    <div class="navigation__item ">
+                        <a class="navigation__link navigation__link--white" href="#">Клубы</a>
+                    </div>
+                    <div class="navigation__item ">
+                        <a class="navigation__link navigation__link--white" href="#">Амбассадоры</a>
+                    </div>
+                    <div class="navigation__item ">
+                        <a class="navigation__link navigation__link--white" href="#">О нас</a>
+                    </div>
+                    <div class="navigation__item">
+                        <a class="navigation__link navigation__link--white" href="#">Сквош-вики</a>
+                    </div>
+                    <div class="navigation__item ">
+                        <a class="navigation__link navigation__link--white" href="#">Статьи</a>
+                    </div>
+                </nav>
+                <div class="social toolbar__helper">
+                    <div class="social__item">
+                        <a href="https://vk.com" target="_blank" class="social__link">
+                            <img class="social__image" src="./img/socials/vk.png" alt="VK"/>
+                        </a>
+                    </div>
+                    <div class="social__item">
+                        <a href="https://facebook.com" target="_blank" class="social__link">
+                            <img class="social__image" src="./img/socials/fb.png" alt="FB"/>
+                        </a>
+                    </div>
+                    <div class="social__item">
+                        <a href="https://instagram.com" target="_blank" class="social__link">
+                            <img class="social__image" src="./img/socials/ig.png" alt="Instagram"/>
+                        </a>
+                    </div>
+                    <div class="social__item">
+                        <a href="https://youtube.com" target="_blank" class="social__link">
+                            <img class="social__image" src="./img/socials/yt.png" alt="youtube"/>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
         <div class="footer__block footerCounter">
             <div class="wrapper">
                 <ul class="footerCounter__container counter">
