--- a/src/index.html
+++ b/src/index.html
@@ -229,6 +229,19 @@
         </div>
         <img src="./img/instagram/insta_title.png" class="instagram__logo" alt="">
     </section>
+
+    <section class="seo  innerWrapper">
+        <div class="wrapper">
+            <div class="seo__title titleText">squash4friends</div>
+            <div class="seo__description logoSymbol">Блок под SEO-текст<br>
+                — Сочетание физической активности и ментальной деятельности<br>
+                — часто называют шахматами на корте<br>
+                — Полезна для здоровья - журнал Форбс назвал сквош самой здоровой игрой<br>
+                — Доступно - легко начать в любом возрасте
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="footer__nav">
         <div class="wrapper">
